<resources>
    <string name="app_name">nyIlnämning</string>

    <string name="title">Title</string>
    <string name="overview">Description</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="Recommended">Recommended</string>
    <string name="Popular">Trending</string>
    <string name="Review">Rate</string>
    <string name="Synopsis">Synopsis</string>
    <string name="default_button">deault</string>
    <string name="randomize">Next movie</string>
    <string name="random">Random</string>
    <string name="disliked">Dislike</string>
    <string name="movie">Movie</string>
    <string name="Search">Search movie</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="review">Review</string>
    <string name="like_button">like_button</string>
    <string name="profile">Profile</string>

</resources>