<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/nav_popularMovies"
        android:icon="@drawable/trending_movies_24"
        android:title="@string/Popular"
        />

    <item
        android:id="@+id/nav_recommended"
        android:title="@string/Recommended"
        android:icon="@drawable/baseline_recommend_24"
        />

    <item
        android:id="@+id/nav_randomMovie"
        android:title="@string/randomize"
        android:icon="@drawable/baseline_movie_filter_24"
        />


    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_manage_accounts_24"
        />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/Search"
        android:icon="@drawable/baseline_logout_24"
        />
</menu>